# motorcycle-detection-bkai

./: .gitignore  README.md  classes.csv  log.txt  prepare_dataset.py  pyproject.toml  test.ipynb
checkpoints/resnet152/lightning_logs/version_7/: metrics.csv
checkpoints/resnet152/lightning_logs/version_8/: metrics.csv
notebooks/: train_reid.ipynb
src/mortobike_project/train/: __main__.py
src/mortobike_project/utils/: __init__.py  dataset.py
src/motorbike_project/config/: class.json
src/motorbike_project/models/: ViT.py  ViT_tiny.py  __init__.py  mobilenetv3_large.py  model.py  resnet152.py  resnet18.py  resnet50.py  swinv2_base.py  test.py
src/motorbike_project/predict/: __main__.py
src/motorbike_project/train/: __main__.py
src/motorbike_project/utils/: dataset.py  test.py  tranforms.py
