[project]
name = "motorbike_project"
authors = [{name = "Duong Minh Quan", email = "hokage321xxx@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "lightning",
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "pandas",
    "matplotlib",
    "wandb",
    "torchsummary",
    "mediapipe",
    "cvzone",
    "albumentations",
    "polars",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "pytest"
]
